reparacion de la  visualizacion